--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,6 +26,7 @@
     -->
     <title>React App</title>
     <script>window.token = "{{token}}"</script>
+    <!-- <script>window.generate = "{{generate}}"</script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
